# my_chatting_server

./: .gitignore  Dockerfile  Dockerfile~  README.md  README.rst  Untitled.ipynb  api_server.py  asycio_test.py  client.py  client_web_socket.py  const.py  data.py  main.html  pyproject.toml  redis_database.py  redis_util.py  server.py  server_web_socket.py
client/: client.py
data_util/: client_request_data.py  data.py  redis_util.py  server_response_data.py
my_chatting_server/: api_server.py  redis_util.py  server.py
tests/: test_my_chatting_server.py
