[tool.poetry]
name = "my_chatting_server"
version = "0.1.0"
description = ""
authors = ["nikolai <nikolai@buzzni.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
redis = "^3.5.3"
pymongo = "^3.11.3"
docopt = "^0.6.2"
websocket = "^0.2.1"
websockets = "^8.1"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
